--- a/package.json
+++ b/package.json
@@ -94,6 +94,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+    "push": "git subtree push --prefix dist origin gh-pages" 
   },
   "repository": {
     "type": "git",
