--- a/package.json
+++ b/package.json
@@ -92,10 +92,12 @@
     "which": "^2.0.2",
     "wildcard": "^2.0.1"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-    "push": "git subtree push --prefix dist origin gh-pages" 
+
+  "scripts": { 
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "live": "git subtree push --prefix dist origin gh-pages" 
   },
+  
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ekdeguzm/restaurant-page.git"
