--- a/package.json
+++ b/package.json
@@ -93,11 +93,11 @@
     "wildcard": "^2.0.1"
   },
 
-  "scripts": { 
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "live": "git subtree push --prefix dist origin gh-pages" 
-  },
-  
+  "scripts": {
+    "gh-deploy": "git push origin :gh-pages && git subtree push --prefix dist origin gh-pages",
+    "gh-deploy-init": "git push origin && git subtree push --prefix dist origin gh-pages"
+},
+
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ekdeguzm/restaurant-page.git"
